--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0"
   },
   "scripts": {
@@ -15,9 +16,13 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.2",
     "handlebars": "^4.7.7",
     "handlebars-loader": "^1.7.2",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
